ha-dash/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha-dash-backend
  namespace: ha-dash
  labels:
    app: ha-dash-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ha-dash-backend
  template:
    metadata:
      labels:
        app: ha-dash-backend
    spec:
      nodeSelector:
        role: worker
      securityContext:
        fsGroup: 1000
      containers:
        - name: ha-dash-backend
          image: harbor.finalq.xyz/tools/ha-dash:2026-01-11-221130
          imagePullPolicy: Always
          command: ["/entrypoint-backend.sh"]
          ports:
            - containerPort: 4000
              name: http
          volumeMounts:
            - name: project-data
              mountPath: /app/project
            - name: app-data
              mountPath: /data
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: project-data
          emptyDir: {}
        - name: app-data
          persistentVolumeClaim:
            claimName: ha-dash-data
