ha-dash/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha-dash-frontend
  namespace: ha-dash
  labels:
    app: ha-dash-frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ha-dash-frontend
  template:
    metadata:
      labels:
        app: ha-dash-frontend
    spec:
      nodeSelector:
        role: worker
      securityContext:
        fsGroup: 1000
      containers:
        - name: ha-dash-frontend
          image: harbor.finalq.xyz/tools/ha-dash:2026-01-11-222805
          imagePullPolicy: Always
          command: ["/entrypoint-frontend.sh"]
          ports:
            - containerPort: 5173
              name: http
          volumeMounts:
            - name: project-data
              mountPath: /app/project
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: project-data
          emptyDir: {}
