ha-dash/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-dash-backend
  namespace: ha-dash
  labels:
    app: ha-dash-backend
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: ha-dash-backend
