ha-dash/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-dash-frontend
  namespace: ha-dash
  labels:
    app: ha-dash-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5173
      protocol: TCP
      name: http
  selector:
    app: ha-dash-frontend
